--- a/lua-lado-oculto-mais-frio.html
+++ b/lua-lado-oculto-mais-frio.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -13,202 +11,125 @@
   <title>Ciência News — Uma pílula com notícias sobre ciências</title>
   <meta name="description" content="Ciência News — Uma pílula com notícias sobre ciências. Atualizações rápidas, confiáveis e curtas sobre ciência." />
 
-<!-- Canonical -->
-<link rel="canonical" href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" />
+  <!-- Canonical -->
+  <link rel="canonical" href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" />
 
-<!-- Open Graph / Social Sharing -->
-<meta property="og:site_name" content="Ciência News" />
-<meta property="og:title" content="Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio" />
-<meta property="og:description" content="Estudo com amostras da missão Chang’e-6 sugere que o lado oculto da Lua teve um interior mais frio que a face visível." />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" />
-<meta property="og:image" content="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg" />
-<meta property="og:image:type" content="image/jpeg" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
-<meta property="og:image:alt" content="Comparação do lado visível e do lado oculto da Lua — crédito NASA / Clementine" />
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:site_name" content="Ciência News" />
+  <meta property="og:title" content="Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio" />
+  <meta property="og:description" content="Estudo com amostras da missão Chang’e-6 sugere que o lado oculto da Lua teve um interior mais frio que a face visível." />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" />
+  <meta property="og:image" content="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Comparação do lado visível e do lado oculto da Lua — crédito NASA / Clementine" />
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@CienciaNewsOficial" />
-<meta name="twitter:title" content="Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio" />
-<meta name="twitter:description" content="Estudo da Chang’e-6 indica que o lado oculto da Lua teve temperaturas internas mais baixas que a face próxima." />
-<meta name="twitter:image" content="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg" />
-<meta name="twitter:image:alt" content="Comparação do lado visível e do lado oculto da Lua — crédito NASA / Clementine" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@CienciaNewsOficial" />
+  <meta name="twitter:title" content="Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio" />
+  <meta name="twitter:description" content="Estudo da Chang’e-6 indica que o lado oculto da Lua teve temperaturas internas mais baixas que a face próxima." />
+  <meta name="twitter:image" content="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg" />
+  <meta name="twitter:image:alt" content="Comparação do lado visível e do lado oculto da Lua — crédito NASA / Clementine" />
 
-<!-- Schema.org JSON-LD -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "NewsArticle",
-  "headline": "Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio",
-  "description": "Pesquisadores analisaram amostras da missão Chang’e-6 e encontraram indícios de que o lado oculto da Lua esfriou mais rápido que a face visível.",
-  "image": "https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg",
-  "author": {
-    "@type": "Person",
-    "name": "Rodrigo Pontes",
-    "url": "https://portalciencianews.com.br/"
-  },
-  "publisher": {
-    "@type": "Organization",
-    "name": "Portal Ciência News",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://portalciencianews.com.br/logo.png"
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "NewsArticle",
+    "headline": "Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio",
+    "description": "Pesquisadores analisaram amostras da missão Chang’e-6 e encontraram indícios de que o lado oculto da Lua esfriou mais rápido que a face visível.",
+    "image": "https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg",
+    "author": {
+      "@type": "Person",
+      "name": "Rodrigo Pontes",
+      "url": "https://portalciencianews.com.br/"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Portal Ciência News",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://portalciencianews.com.br/logo.png"
+      }
+    },
+    "datePublished": "2025-09-30",
+    "dateModified": "2025-09-30",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html"
     }
-  },
-  "datePublished": "2025-09-30",
-  "dateModified": "2025-09-30",
-  "mainEntityOfPage": {
-    "@type": "WebPage",
-    "@id": "https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html"
   }
-}
-</script>
+  </script>
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <!-- Tailwind CSS (CDN) - utilitários primeiro -->
-<script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind CSS (CDN) -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-<!-- Font Awesome (ícones) - depois do Tailwind -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-<!-- Arquivo custom (style.css) - por último -->
-<link rel="stylesheet" href="style.css" />
-
-  <!-- Comentário: scripts (script.js) colocados no final do body -->
+  <!-- Font Awesome (ícones) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body class="antialiased text-gray-900">
 
   <!-- ===========================
-       CABEÇALHO (HEADER)
-       - classe: site-header (estilizada em style.css)
-       - contém: logotipo, menu (desktop), botão mobile, ícones sociais
+       CABEÇALHO (HEADER) - Tailwind
        =========================== -->
-  <header class="site-header" role="banner">
-    <div class="container header-inner">
+  <header class="bg-white shadow-md" role="banner">
+    <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
+      
       <!-- Logo -->
-      <a href="index.html" class="logo-link" aria-label="Ciência News — Início">
-        <!-- arquivo de logo: logo.png -->
-        <img src="logo.png" alt="Logotipo Ciência News" class="logo" />
+      <a href="index.html" class="flex items-center" aria-label="Ciência News — Início">
+        <img src="logo.png" alt="Logotipo Ciência News" class="h-10 w-auto" />
       </a>
 
       <!-- Navegação principal (desktop) -->
-      <nav class="main-nav" role="navigation" aria-label="Menu principal">
-        <ul class="nav-list">
-          <li><a href="https://canalciencianews.github.io/" class="nav-link">Início</a></li>
-          <li><a href="#" class="nav-link">Contato</a></li>
-        </ul>
+      <nav class="hidden md:flex space-x-6" role="navigation" aria-label="Menu principal">
+        <a href="https://canalciencianews.github.io/" class="text-gray-700 hover:text-blue-700">Início</a>
+        <a href="#" class="text-gray-700 hover:text-blue-700">Contato</a>
       </nav>
 
-      <!-- Ícones sociais no cabeçalho -->
-      <div class="social-icons header-social" aria-hidden="false">
-        <!-- Facebook -->
-        <a href="https://www.facebook.com/profile.php?id=100079774894307" class="social-link" aria-label="Facebook">
-          <i class="fab fa-facebook-f" aria-hidden="true"></i>
+      <!-- Ícones sociais -->
+      <div class="hidden md:flex space-x-4">
+        <a href="https://www.facebook.com/profile.php?id=100079774894307" aria-label="Facebook" class="text-gray-600 hover:text-blue-600">
+          <i class="fab fa-facebook-f"></i>
         </a>
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/ciencianews1/" class="social-link" aria-label="Instagram">
-          <i class="fab fa-instagram" aria-hidden="true"></i>
+        <a href="https://www.instagram.com/ciencianews1/" aria-label="Instagram" class="text-gray-600 hover:text-pink-500">
+          <i class="fab fa-instagram"></i>
         </a>
-        <!-- YouTube -->
-        <a href="https://www.youtube.com/@CienciaNewsOficial" class="social-link" aria-label="YouTube">
-          <i class="fab fa-youtube" aria-hidden="true"></i>
+        <a href="https://www.youtube.com/@CienciaNewsOficial" aria-label="YouTube" class="text-gray-600 hover:text-red-600">
+          <i class="fab fa-youtube"></i>
         </a>
-        <!-- TikTok -->
-        <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" class="social-link" aria-label="TikTok">
-          <i class="fab fa-tiktok" aria-hidden="true"></i>
+        <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" aria-label="TikTok" class="text-gray-600 hover:text-black">
+          <i class="fab fa-tiktok"></i>
         </a>
-        <!-- Kwai: Font Awesome pode não ter um ícone de marca; usamos ícone genérico de vídeo como fallback -->
-        <a href="https://www.kwai.com/@CanalCienciaNews" class="social-link" aria-label="Kwai (ícone genérico)">
-          <i class="fa-solid fa-video" aria-hidden="true"></i>
+        <a href="https://www.kwai.com/@CanalCienciaNews" aria-label="Kwai" class="text-gray-600 hover:text-yellow-500">
+          <i class="fa-solid fa-video"></i>
         </a>
-        <!-- WhatsApp -->
-        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" class="social-link" aria-label="WhatsApp">
-          <i class="fab fa-whatsapp" aria-hidden="true"></i>
+        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" aria-label="WhatsApp" class="text-gray-600 hover:text-green-600">
+          <i class="fab fa-whatsapp"></i>
         </a>
       </div>
 
       <!-- Botão toggle do menu mobile -->
-<button class="nav-toggle" id="navToggle" aria-label="Abrir menu" aria-expanded="false" aria-controls="mobileNav">
-  <span class="sr-only">Abrir menu</span>
-  ☰  <!-- ícone visível para o hamburguer -->
-</button>
+      <button id="navToggle" class="md:hidden text-2xl text-gray-700 focus:outline-none" aria-label="Abrir menu" aria-expanded="false" aria-controls="mobileNav">
+        ☰
+      </button>
     </div>
 
-    <!-- Menu Mobile (escondido por padrão) -->
-    <nav id="mobileNav" class="mobile-nav" aria-label="Menu móvel" hidden>
-      <ul class="nav-list">
-          <li><a href="https://canalciencianews.github.io/" class="nav-link">Início</a></li>
-          <li><a href="#" class="nav-link">Notícias</a></li>
-          <li><a href="#" class="nav-link">Contato</a></li>
-        </ul>
+    <!-- Menu Mobile -->
+    <nav id="mobileNav" class="hidden md:hidden bg-white border-t border-gray-200" aria-label="Menu móvel">
+      <ul class="flex flex-col space-y-2 p-4">
+        <li><a href="https://canalciencianews.github.io/" class="text-gray-700 hover:text-blue-700">Início</a></li>
+        <li><a href="#" class="text-gray-700 hover:text-blue-700">Notícias</a></li>
+        <li><a href="#" class="text-gray-700 hover:text-blue-700">Contato</a></li>
+      </ul>
     </nav>
-  </header>
-
-<!-- ===========================
-     HERO (Carrossel responsivo com Swiper.js)
-     - colada ao cabeçalho (sem margem/espaço)
-     - mantém proporção 1920x350 (~5.48:1)
-     - otimizado para mobile
-     =========================== -->
-
-<!-- CDN Swiper CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
-<section id="hero" class="hero relative inset-x-0 z-20">
-  <div class="swiper w-full" style="aspect-ratio: 1920 / 350;">
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide">
-        <img src="hero/1.png" alt="Banner 1" class="w-full h-full object-cover" />
-      </div>
-      <div class="swiper-slide">
-        <img src="hero/2.png" alt="Banner 2" class="w-full h-full object-cover" />
-      </div>
-      <div class="swiper-slide">
-        <img src="hero/3.png" alt="Banner 3" class="w-full h-full object-cover" />
-      </div>
-      <div class="swiper-slide">
-        <img src="hero/4.png" alt="Banner 4" class="w-full h-full object-cover" />
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CDN Swiper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script>
-  // Inicialização do Swiper com autoplay 5s
-  const heroSwiper = new Swiper('.swiper', {
-    loop: true,
-    autoplay: {
-      delay: 5000, // 5 segundos
-      disableOnInteraction: false,
-    },
-  });
-</script>
-
-
- <!-- ===========================
-     MAIN (conteúdo principal)
-     - background branco padrão
-     - organizado com classes compatíveis com style.css
-     =========================== -->
-<main id="mainContent" class="site-main bg-white" role="main">
-  <div class="container main-inner py-8">
-
-<!-- ======= Parte: Título (até 100 caracteres) ======= -->
-<header class="mb-6 max-w-[1440px] mx-auto px-4 md:px-6 lg:px-8">
-  <h1 class="font-extrabold leading-tight text-3xl md:text-5xl lg:text-6xl">
-    Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio
-  </h1>
-  <p class="mt-2 text-sm md:text-base text-gray-600">
-    30 de setembro de 2025 — por Rodrigo Pontes
-  </p>
-</header>
+    </header>
 
 <!-- ======= Parte: Imagem de destaque ======= -->
 <figure class="mb-8 w-full overflow-hidden rounded-xl shadow-sm max-w-[1440px] mx-auto px-4 md:px-6 lg:px-8">
