--- a/lua-lado-oculto-mais-frio.html
+++ b/lua-lado-oculto-mais-frio.html
@@ -166,24 +166,26 @@
     </script>
   </section>
 <!-- Main Section -->
-  <main class="bg-white">
+  
+        <main class="pt-12 sm:pt-16 lg:pt-20 pb-12 sm:pb-16 lg:pb-20">
+
   <!-- ======= Imagem de destaque ======= -->
-  <figure class="mb-8 w-full overflow-hidden rounded-xl shadow-sm max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8">
+  <figure class="max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 mb-12 rounded-xl overflow-hidden shadow-lg bg-white">
     <div class="relative w-full pb-[56.25%] overflow-hidden">
       <img
         src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
         alt="Comparação: lado visível e lado oculto da Lua (imagem Clementine / NASA)"
         loading="lazy"
-        class="absolute inset-0 w-full h-full object-cover transform transition-transform duration-300 hover:scale-105"
+        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 hover:scale-105"
       />
     </div>
-    <figcaption class="mt-2 text-xs sm:text-sm text-gray-600 text-center sm:text-left">
+    <figcaption class="mt-2 text-xs md:text-sm text-gray-600">
       A imagem compara o lado visível (esquerda) e o lado oculto (direita) da Lua. Crédito: NASA / Clementine.
     </figcaption>
   </figure>
 
   <!-- ======= Primeira section ======= -->
-  <section class="mb-10 prose prose-sm sm:prose lg:prose-lg max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8">
+  <section class="max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 mb-12 prose prose-lg text-gray-800">
     <p>
       Cientistas que estudaram fragmentos trazidos pela missão Chang'e-6 encontraram pistas que tornam a Lua ainda mais enigmática: o interior do lado oculto parece ter sido mais frio quando comparado com o lado que sempre nos encara.
     </p>
@@ -199,14 +201,14 @@
   </section>
 
   <!-- ======= Segunda section ======= -->
-  <section class="mb-10 max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8">
+  <section class="max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 mb-12">
     <div class="flex items-center gap-3 mb-4">
-      <span class="block w-1 h-6 sm:h-8 bg-gray-300"></span>
-      <h2 class="text-[#0b3d91] font-semibold text-lg sm:text-xl lg:text-2xl">
+      <span class="block w-1 h-6 md:h-8 bg-gray-300"></span>
+      <h2 class="text-[#0b3d91] font-semibold text-lg md:text-2xl">
         Evidências das amostras Chang'e-6: um manto lunar mais frio no lado oculto
       </h2>
     </div>
-    <div class="prose prose-sm sm:prose lg:prose-lg max-w-none text-gray-800">
+    <div class="prose prose-lg max-w-none text-gray-800">
       <p>
         As análises químicas apontam para diferenças na presença de elementos que geram calor por decaimento radioativo — como urânio, tório e potássio. Menos desses elementos significa menos calor interno, logo um resfriamento mais rápido.
       </p>
@@ -223,14 +225,14 @@
   </section>
 
   <!-- ======= Terceira section ======= -->
-  <section class="mb-10 max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8">
+  <section class="max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 mb-12">
     <div class="flex items-center gap-3 mb-4">
-      <span class="block w-1 h-6 sm:h-8 bg-gray-300"></span>
-      <h2 class="text-[#0b3d91] font-semibold text-lg sm:text-xl lg:text-2xl">
+      <span class="block w-1 h-6 md:h-8 bg-gray-300"></span>
+      <h2 class="text-[#0b3d91] font-semibold text-lg md:text-2xl">
         Temperaturas no manto lunar: metodologia e comparação com a face próxima
       </h2>
     </div>
-    <div class="prose prose-sm sm:prose lg:prose-lg max-w-none text-gray-800">
+    <div class="prose prose-lg max-w-none text-gray-800">
       <p>
         Para estimar a temperatura original em que a rocha cristalizou, os cientistas mediram composições em minerais como olivina, piroxena e plagioclásio, além de isótopos de chumbo derivados do decaimento do urânio. Essa assinatura química funciona como um “termômetro antigo”.
       </p>
@@ -241,49 +243,50 @@
         Eles foram além: estudaram a “rocha-mãe” (antes de derreter e recristalizar) com base em satélite e modelagem geofísica, encontrando diferença de ~70 °C entre os dois lados nesse estágio anterior.
       </p>
       <p>
-        O estudo citado também destaca que a abundância menor de elementos produtores de calor (urânio, tório, potássio) no lado oculto pode explicar parte desse resfriamento mais rápido. 
+        O estudo citado também destaca que a abundância menor de elementos produtores de calor (urânio, tório, potássio) no lado oculto pode explicar parte desse resfriamento mais rápido.
       </p>
     </div>
   </section>
 
   <!-- ======= Quarta section ======= -->
-  <section class="mb-10 max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8">
+  <section class="max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 mb-12">
     <div class="flex items-center gap-3 mb-4">
-      <span class="block w-1 h-6 sm:h-8 bg-gray-300"></span>
-      <h2 class="text-[#0b3d91] font-semibold text-lg sm:text-xl lg:text-2xl">
+      <span class="block w-1 h-6 md:h-8 bg-gray-300"></span>
+      <h2 class="text-[#0b3d91] font-semibold text-lg md:text-2xl">
         Impactos para a origem lunar: hipóteses que explicam a assimetria térmica
       </h2>
     </div>
-    <div class="prose prose-sm sm:prose lg:prose-lg max-w-none text-gray-800">
+    <div class="prose prose-lg max-w-none text-gray-800">
       <p>
-        Uma hipótese considera que um impacto gigantesco no passado poderia ter redistribuído materiais densos e ricos em elementos radioativos para o lado próximo, deixando o lado oculto com menos capacidade de gerar calor internamente. 
+        Uma hipótese considera que um impacto gigantesco no passado poderia ter redistribuído materiais densos e ricos em elementos radioativos para o lado próximo, deixando o lado oculto com menos capacidade de gerar calor internamente.
       </p>
       <p>
-        Outra linha sugere que a Lua se formou a partir da fusão de dois corpos com perfis térmicos distintos. Cada “metade” traria consigo uma herança térmica diferente — o que explicaria por que o lado oculto parece mais frio desde o início. 
+        Outra linha sugere que a Lua se formou a partir da fusão de dois corpos com perfis térmicos distintos. Cada “metade” traria consigo uma herança térmica diferente — o que explicaria por que o lado oculto parece mais frio desde o início.
       </p>
       <p>
-        Também foi levada em conta a distribuição desigual do material KREEP (potássio, elementos de terras raras, fósforo) — que concentra geradores de calor — no manto da Lua. Esse material é mais abundante no lado visível, contribuindo para sua temperatura interna mais elevada. 
+        Também foi levada em conta a distribuição desigual do material KREEP (potássio, elementos de terras raras, fósforo) — que concentra geradores de calor — no manto da Lua. Esse material é mais abundante no lado visível, contribuindo para sua temperatura interna mais elevada.
       </p>
       <p>
-        Por fim, modelos recentes discutem que o brilho da Terra logo após o impacto inicial poderia provocar circulação no oceano magmático lunar, transportando cristais e influenciando as diferenças crustais e térmicas entre as faces. 
+        Por fim, modelos recentes discutem que o brilho da Terra logo após o impacto inicial poderia provocar circulação no oceano magmático lunar, transportando cristais e influenciando as diferenças crustais e térmicas entre as faces.
       </p>
     </div>
   </section>
 
-  <!-- Parágrafo isolado de encerramento -->
-  <p class="mb-8 max-w-[1440px] mx-auto prose prose-sm sm:prose lg:prose-lg text-gray-800 px-4 sm:px-6 lg:px-8">
+  <!-- ======= Parágrafo isolado de encerramento ======= -->
+  <p class="mb-12 max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 prose prose-lg text-gray-800">
     Os achados mais recentes ampliam nossa compreensão da Lua: não é apenas uma crosta diferente de um lado e outro, mas um contraste profundo no interior — pistas que ajudam a reescrever os capítulos da formação lunar.
   </p>
 
-  <!-- Card azul marinho -->
-  <div class="max-w-[1440px] mx-auto p-6 bg-[#0b3d91] rounded-lg text-white px-4 sm:px-6 lg:px-8 mb-8">
+  <!-- ======= Card azul marinho ======= -->
+  <div class="max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 mb-12 bg-[#0b3d91] rounded-lg p-6 text-white">
     <p>
       Texto do artigo por Rodrigo Pontes — PortalCienciaNews.com.br  
       <a href="https://phys.org/news/2025-09-side-moon-colder-lunar.html" target="_blank" class="underline text-white">
-        Fonte: Phys.org (Far side of the moon may be colder than the near side)  
+        Fonte: Phys.org (Far side of the moon may be colder than the near side)
       </a>
     </p>
   </div>
+
   </main>
 
   <!-- ===========================
