--- a/lua-lado-oculto-mais-frio.html
+++ b/lua-lado-oculto-mais-frio.html
@@ -130,45 +130,65 @@
     </div>
   </nav>
     </header>
-  <!-- HERO CARROSSEL -->
-  <section class="relative w-full z-10">
-    <div class="swiper w-full" style="aspect-ratio: 1920/350;">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="hero/1.png" alt="Banner 1" class="w-full h-full object-cover" />
-        </div>
-        <div class="swiper-slide">
-          <img src="hero/2.png" alt="Banner 2" class="w-full h-full object-cover" />
-        </div>
-        <div class="swiper-slide">
-          <img src="hero/3.png" alt="Banner 3" class="w-full h-full object-cover" />
-        </div>
-        <div class="swiper-slide">
-          <img src="hero/4.png" alt="Banner 4" class="w-full h-full object-cover" />
-        </div>
+
+<!-- ===========================
+     HERO (Carrossel responsivo com Swiper.js)
+     - colada ao cabeçalho (sem margem/espaço)
+     - mantém proporção 1920x350 (~5.48:1)
+     - otimizado para mobile
+     =========================== -->
+
+<!-- CDN Swiper CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+<section id="hero" class="hero relative inset-x-0 z-20">
+  <div class="swiper w-full" style="aspect-ratio: 1920 / 350;">
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide">
+        <img src="hero/1.png" alt="Banner 1" class="w-full h-full object-cover" />
+      </div>
+      <div class="swiper-slide">
+        <img src="hero/2.png" alt="Banner 2" class="w-full h-full object-cover" />
+      </div>
+      <div class="swiper-slide">
+        <img src="hero/3.png" alt="Banner 3" class="w-full h-full object-cover" />
+      </div>
+      <div class="swiper-slide">
+        <img src="hero/4.png" alt="Banner 4" class="w-full h-full object-cover" />
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        new Swiper('.swiper', {
-          loop: true,
-          autoplay: { delay: 5000, disableOnInteraction: false },
-        });
-        // Mobile nav script
-        const navToggle = document.getElementById('navToggle');
-        const mobileNav = document.getElementById('mobileNav');
-        navToggle.addEventListener('click', function () {
-          mobileNav.classList.toggle('hidden');
-          navToggle.setAttribute('aria-expanded', !mobileNav.classList.contains('hidden'));
-        });
-      });
-    </script>
-  </section>
-<!-- Main Section -->
-<main class="pt-12 sm:pt-16 lg:pt-20 pb-8 sm:pb-12 lg:pb-16">
+  </div>
+</section>
 
-  <div class="max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8">
+<!-- CDN Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  // Inicialização do Swiper com autoplay 5s
+  const heroSwiper = new Swiper('.swiper', {
+    loop: true,
+    autoplay: {
+      delay: 5000, // 5 segundos
+      disableOnInteraction: false,
+    },
+  });
+</script>
+
+
+ <!-- ===========================
+     MAIN (conteúdo principal)
+     - background branco padrão
+     - organizado com classes compatíveis com style.css
+     =========================== -->
+<main class="pt-12 sm:pt-16 lg:pt-20 pb-12 sm:pb-16 lg:pb-20">
+
+  <!-- Container centralizado -->
+  <div class="max-w-[1000px] mx-auto px-4 sm:px-6 lg:px-8">
+
+    <!-- ======= Título do Artigo ======= -->
+    <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-[#0b3d91] mb-8">
+      Lado oculto da Lua é mais frio: descobertas da missão Chang'e-6
+    </h1>
 
     <!-- ======= Imagem de destaque ======= -->
     <figure class="mb-10 rounded-xl overflow-hidden shadow-lg bg-white">
@@ -181,12 +201,13 @@
         />
       </div>
       <figcaption class="mt-2 text-xs md:text-sm text-gray-600">
-        A imagem compara o lado visível (esquerda) e o lado oculto (direita) da Lua. Crédito: NASA / Clementine.
+        Comparação entre o lado visível (esquerda) e o lado oculto (direita) da Lua. Crédito: NASA / Clementine.
       </figcaption>
     </figure>
 
-    <!-- ======= Primeira section ======= -->
+    <!-- ======= Conteúdo do Artigo ======= -->
     <section class="mb-12 prose prose-lg text-gray-800">
+
       <p>
         Cientistas que estudaram fragmentos trazidos pela missão Chang'e-6 encontraram pistas que tornam a Lua ainda mais enigmática: o interior do lado oculto parece ter sido mais frio quando comparado com o lado que sempre nos encara.
       </p>
@@ -199,87 +220,64 @@
       <p>
         Essa descoberta importa porque mostra que as diferenças da Lua não são só de superfície (crateras, mares escuros), mas vão até o interior — levantando questões sobre colisões antigas, movimentos internos e a distribuição de elementos radioativos no satélite.
       </p>
-    </section>
 
-    <!-- ======= Segunda section ======= -->
-    <section class="mb-12">
-      <div class="flex items-center gap-3 mb-4">
-        <span class="block w-1 h-6 md:h-8 bg-gray-300"></span>
-        <h2 class="text-[#0b3d91] font-semibold text-lg md:text-2xl">
-          Evidências das amostras Chang'e-6: um manto lunar mais frio no lado oculto
-        </h2>
-      </div>
-      <div class="prose prose-lg max-w-none text-gray-800">
-        <p>
-          As análises químicas apontam para diferenças na presença de elementos que geram calor por decaimento radioativo — como urânio, tório e potássio. Menos desses elementos significa menos calor interno, logo um resfriamento mais rápido.
-        </p>
-        <p>
-          Existem hipóteses chamativas: um impacto colossal no passado teria espalhado materiais de forma desigual; ou quem sabe a Lua tenha nascido de dois corpos diferentes que se juntaram — cada um com uma história térmica própria.
-        </p>
-        <p>
-          Os pesquisadores também cruzaram dados de satélite com testes de laboratório para traçar a história térmica dessas rochas. O retrato que surge não é definitivo, mas é o primeiro obtido com amostras reais do lado oculto — e isso pesa muito na balança científica.
-        </p>
-        <p>
-          A Lua segue cheia de segredos. O que parece ser apenas diferença de aparência entre as duas faces pode esconder capítulos importantes sobre a formação e evolução do sistema Terra-Lua.
-        </p>
-      </div>
-    </section>
+      <h2 class="text-[#0b3d91] mt-10 mb-4 text-2xl md:text-3xl font-semibold">
+        Evidências das amostras Chang'e-6
+      </h2>
+      <p>
+        As análises químicas apontam para diferenças na presença de elementos que geram calor por decaimento radioativo — como urânio, tório e potássio. Menos desses elementos significa menos calor interno, logo um resfriamento mais rápido.
+      </p>
+      <p>
+        Existem hipóteses chamativas: um impacto colossal no passado teria espalhado materiais de forma desigual; ou quem sabe a Lua tenha nascido de dois corpos diferentes que se juntaram — cada um com uma história térmica própria.
+      </p>
+      <p>
+        Os pesquisadores também cruzaram dados de satélite com testes de laboratório para traçar a história térmica dessas rochas. O retrato que surge não é definitivo, mas é o primeiro obtido com amostras reais do lado oculto — e isso pesa muito na balança científica.
+      </p>
+      <p>
+        A Lua segue cheia de segredos. O que parece ser apenas diferença de aparência entre as duas faces pode esconder capítulos importantes sobre a formação e evolução do sistema Terra-Lua.
+      </p>
 
-    <!-- ======= Terceira section ======= -->
-    <section class="mb-12">
-      <div class="flex items-center gap-3 mb-4">
-        <span class="block w-1 h-6 md:h-8 bg-gray-300"></span>
-        <h2 class="text-[#0b3d91] font-semibold text-lg md:text-2xl">
-          Temperaturas no manto lunar: metodologia e comparação com a face próxima
-        </h2>
-      </div>
-      <div class="prose prose-lg max-w-none text-gray-800">
-        <p>
-          Para estimar a temperatura original em que a rocha cristalizou, os cientistas mediram composições em minerais como olivina, piroxena e plagioclásio, além de isótopos de chumbo derivados do decaimento do urânio. Essa assinatura química funciona como um “termômetro antigo”.
-        </p>
-        <p>
-          Comparando essas medições com simulações computadorizadas, a equipe inferiu que as rochas do lado oculto teriam se solidificado em ~1.100 °C — valor cerca de 100 °C mais baixo do que rochas semelhantes do lado próximo.
-        </p>
-        <p>
-          Eles foram além: estudaram a “rocha-mãe” (antes de derreter e recristalizar) com base em satélite e modelagem geofísica, encontrando diferença de ~70 °C entre os dois lados nesse estágio anterior.
-        </p>
-        <p>
-          O estudo citado também destaca que a abundância menor de elementos produtores de calor (urânio, tório, potássio) no lado oculto pode explicar parte desse resfriamento mais rápido.
-        </p>
-      </div>
-    </section>
+      <h2 class="text-[#0b3d91] mt-10 mb-4 text-2xl md:text-3xl font-semibold">
+        Temperaturas no manto lunar: metodologia e comparação
+      </h2>
+      <p>
+        Para estimar a temperatura original em que a rocha cristalizou, os cientistas mediram composições em minerais como olivina, piroxena e plagioclásio, além de isótopos de chumbo derivados do decaimento do urânio. Essa assinatura química funciona como um “termômetro antigo”.
+      </p>
+      <p>
+        Comparando essas medições com simulações computadorizadas, a equipe inferiu que as rochas do lado oculto teriam se solidificado em ~1.100 °C — valor cerca de 100 °C mais baixo do que rochas semelhantes do lado próximo.
+      </p>
+      <p>
+        Eles foram além: estudaram a “rocha-mãe” (antes de derreter e recristalizar) com base em satélite e modelagem geofísica, encontrando diferença de ~70 °C entre os dois lados nesse estágio anterior.
+      </p>
+      <p>
+        O estudo citado também destaca que a abundância menor de elementos produtores de calor (urânio, tório, potássio) no lado oculto pode explicar parte desse resfriamento mais rápido.
+      </p>
 
-    <!-- ======= Quarta section ======= -->
-    <section class="mb-12">
-      <div class="flex items-center gap-3 mb-4">
-        <span class="block w-1 h-6 md:h-8 bg-gray-300"></span>
-        <h2 class="text-[#0b3d91] font-semibold text-lg md:text-2xl">
-          Impactos para a origem lunar: hipóteses que explicam a assimetria térmica
-        </h2>
-      </div>
-      <div class="prose prose-lg max-w-none text-gray-800">
-        <p>
-          Uma hipótese considera que um impacto gigantesco no passado poderia ter redistribuído materiais densos e ricos em elementos radioativos para o lado próximo, deixando o lado oculto com menos capacidade de gerar calor internamente.
-        </p>
-        <p>
-          Outra linha sugere que a Lua se formou a partir da fusão de dois corpos com perfis térmicos distintos. Cada “metade” traria consigo uma herança térmica diferente — o que explicaria por que o lado oculto parece mais frio desde o início.
-        </p>
-        <p>
-          Também foi levada em conta a distribuição desigual do material KREEP (potássio, elementos de terras raras, fósforo) — que concentra geradores de calor — no manto da Lua. Esse material é mais abundante no lado visível, contribuindo para sua temperatura interna mais elevada.
-        </p>
-        <p>
-          Por fim, modelos recentes discutem que o brilho da Terra logo após o impacto inicial poderia provocar circulação no oceano magmático lunar, transportando cristais e influenciando as diferenças crustais e térmicas entre as faces.
-        </p>
-      </div>
-    </section>
+      <h2 class="text-[#0b3d91] mt-10 mb-4 text-2xl md:text-3xl font-semibold">
+        Impactos para a origem lunar
+      </h2>
+      <p>
+        Uma hipótese considera que um impacto gigantesco no passado poderia ter redistribuído materiais densos e ricos em elementos radioativos para o lado próximo, deixando o lado oculto com menos capacidade de gerar calor internamente.
+      </p>
+      <p>
+        Outra linha sugere que a Lua se formou a partir da fusão de dois corpos com perfis térmicos distintos. Cada “metade” traria consigo uma herança térmica diferente — o que explicaria por que o lado oculto parece mais frio desde o início.
+      </p>
+      <p>
+        Também foi levada em conta a distribuição desigual do material KREEP (potássio, elementos de terras raras, fósforo) — que concentra geradores de calor — no manto da Lua. Esse material é mais abundante no lado visível, contribuindo para sua temperatura interna mais elevada.
+      </p>
+      <p>
+        Por fim, modelos recentes discutem que o brilho da Terra logo após o impacto inicial poderia provocar circulação no oceano magmático lunar, transportando cristais e influenciando as diferenças crustais e térmicas entre as faces.
+      </p>
 
-    <!-- ======= Parágrafo isolado de encerramento ======= -->
-    <p class="mb-8 prose prose-lg text-gray-800">
-      Os achados mais recentes ampliam nossa compreensão da Lua: não é apenas uma crosta diferente de um lado e outro, mas um contraste profundo no interior — pistas que ajudam a reescrever os capítulos da formação lunar.
-    </p>
+      <!-- Encerramento -->
+      <p class="mt-8">
+        Os achados mais recentes ampliam nossa compreensão da Lua: não é apenas uma crosta diferente de um lado e outro, mas um contraste profundo no interior — pistas que ajudam a reescrever os capítulos da formação lunar.
+      </p>
+
+    </section>
 
     <!-- ======= Card minimalista de atribuição ======= -->
-    <div class="bg-gray-100 rounded-lg p-4 text-gray-700 text-sm">
+    <div class="bg-gray-100 rounded-lg p-4 text-gray-700 text-sm mt-6">
       Texto do artigo por Rodrigo Pontes — PortalCienciaNews.com.br  
       <a href="https://phys.org/news/2025-09-side-moon-colder-lunar.html" target="_blank" class="underline text-gray-700">
         Fonte: Phys.org (Far side of the moon may be colder than the near side)
@@ -287,6 +285,7 @@
     </div>
 
   </div>
+
 </main>
 
 
@@ -419,4 +418,4 @@
 
   
 </body>
-</html>
+    </html>
