--- a/quanto-tempo-foton-excitacao-atomica.html
+++ b/quanto-tempo-foton-excitacao-atomica.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -56,87 +57,105 @@
 }
 </script>
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="favicon.png" />
 
-  <!-- Tailwind CSS (CDN) - utilitários primeiro -->
+<!-- Tailwind CSS (CDN) -->
 <script src="https://cdn.tailwindcss.com"></script>
 
-<!-- Font Awesome (ícones) - depois do Tailwind -->
+<!-- Font Awesome (ícones) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<!-- Arquivo custom (style.css) - por último -->
-<link rel="stylesheet" href="style.css" />
-
-  <!-- Comentário: scripts (script.js) colocados no final do body -->
-</head>
 <body class="antialiased text-gray-900">
 
   <!-- ===========================
        CABEÇALHO (HEADER)
-       - classe: site-header (estilizada em style.css)
-       - contém: logotipo, menu (desktop), botão mobile, ícones sociais
        =========================== -->
-  <header class="site-header" role="banner">
-    <div class="container header-inner">
+  <header class="bg-[#001F3F] text-white">
+    <div class="max-w-[1440px] mx-auto flex items-center justify-between p-4 md:p-6">
+
       <!-- Logo -->
-      <a href="index.html" class="logo-link" aria-label="Ciência News — Início">
-        <!-- arquivo de logo: logo.png -->
-        <img src="logo.png" alt="Logotipo Ciência News" class="logo" />
+      <a href="index.html" aria-label="Ciência News — Início" class="flex-shrink-0">
+        <img src="logo.png" alt="Logotipo Ciência News" class="h-10 md:h-12" />
       </a>
 
-      <!-- Navegação principal (desktop) -->
-      <nav class="main-nav" role="navigation" aria-label="Menu principal">
-        <ul class="nav-list">
-          <li><a href="https://canalciencianews.github.io/" class="nav-link">Início</a></li>
-          <li><a href="#" class="nav-link">Contato</a></li>
-        </ul>
+      <!-- Menu Desktop -->
+      <nav class="hidden md:flex space-x-6" aria-label="Menu principal">
+        <a href="https://canalciencianews.github.io/" class="hover:text-yellow-400 transition">Início</a>
+        <a href="#" class="hover:text-yellow-400 transition">Contato</a>
       </nav>
 
-      <!-- Ícones sociais no cabeçalho -->
-      <div class="social-icons header-social" aria-hidden="false">
-        <!-- Facebook -->
-        <a href="https://www.facebook.com/profile.php?id=100079774894307" class="social-link" aria-label="Facebook">
-          <i class="fab fa-facebook-f" aria-hidden="true"></i>
+      <!-- Ícones sociais Desktop -->
+      <div class="hidden md:flex space-x-4">
+        <a href="https://www.facebook.com/profile.php?id=100079774894307" aria-label="Facebook" class="hover:text-yellow-400 transition">
+          <i class="fab fa-facebook-f"></i>
         </a>
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/ciencianews1/" class="social-link" aria-label="Instagram">
-          <i class="fab fa-instagram" aria-hidden="true"></i>
+        <a href="https://www.instagram.com/ciencianews1/" aria-label="Instagram" class="hover:text-yellow-400 transition">
+          <i class="fab fa-instagram"></i>
         </a>
-        <!-- YouTube -->
-        <a href="https://www.youtube.com/@CienciaNewsOficial" class="social-link" aria-label="YouTube">
-          <i class="fab fa-youtube" aria-hidden="true"></i>
+        <a href="https://www.youtube.com/@CienciaNewsOficial" aria-label="YouTube" class="hover:text-yellow-400 transition">
+          <i class="fab fa-youtube"></i>
         </a>
-        <!-- TikTok -->
-        <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" class="social-link" aria-label="TikTok">
-          <i class="fab fa-tiktok" aria-hidden="true"></i>
+        <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" aria-label="TikTok" class="hover:text-yellow-400 transition">
+          <i class="fab fa-tiktok"></i>
         </a>
-        <!-- Kwai: Font Awesome pode não ter um ícone de marca; usamos ícone genérico de vídeo como fallback -->
-        <a href="https://www.kwai.com/@CanalCienciaNews" class="social-link" aria-label="Kwai (ícone genérico)">
-          <i class="fa-solid fa-video" aria-hidden="true"></i>
+        <a href="https://www.kwai.com/@CanalCienciaNews" aria-label="Kwai (ícone genérico)" class="hover:text-yellow-400 transition">
+          <i class="fa-solid fa-video"></i>
         </a>
-        <!-- WhatsApp -->
-        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" class="social-link" aria-label="WhatsApp">
-          <i class="fab fa-whatsapp" aria-hidden="true"></i>
+        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" aria-label="WhatsApp" class="hover:text-yellow-400 transition">
+          <i class="fab fa-whatsapp"></i>
         </a>
       </div>
 
-      <!-- Botão toggle do menu mobile -->
-<button class="nav-toggle" id="navToggle" aria-label="Abrir menu" aria-expanded="false" aria-controls="mobileNav">
-  <span class="sr-only">Abrir menu</span>
-  ☰  <!-- ícone visível para o hamburguer -->
-</button>
+      <!-- Botão menu mobile -->
+      <button id="navToggle" class="md:hidden text-2xl" aria-label="Abrir menu">
+        ☰
+      </button>
+
     </div>
 
-    <!-- Menu Mobile (escondido por padrão) -->
-    <nav id="mobileNav" class="mobile-nav" aria-label="Menu móvel" hidden>
-      <ul class="nav-list">
-          <li><a href="https://canalciencianews.github.io/" class="nav-link">Início</a></li>
-          <li><a href="#" class="nav-link">Notícias</a></li>
-          <li><a href="#" class="nav-link">Contato</a></li>
-        </ul>
+    <!-- Menu Mobile -->
+    <nav id="mobileNav" class="md:hidden bg-[#001F3F] text-white" hidden aria-label="Menu móvel">
+      <ul class="flex flex-col space-y-2 p-4">
+        <li><a href="https://canalciencianews.github.io/" class="hover:text-yellow-400 transition">Início</a></li>
+        <li><a href="#" class="hover:text-yellow-400 transition">Notícias</a></li>
+        <li><a href="#" class="hover:text-yellow-400 transition">Contato</a></li>
+      </ul>
+      <!-- Ícones sociais Mobile -->
+      <div class="flex justify-start space-x-4 mt-2">
+        <a href="https://www.facebook.com/profile.php?id=100079774894307" aria-label="Facebook" class="hover:text-yellow-400 transition">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/ciencianews1/" aria-label="Instagram" class="hover:text-yellow-400 transition">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.youtube.com/@CienciaNewsOficial" aria-label="YouTube" class="hover:text-yellow-400 transition">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" aria-label="TikTok" class="hover:text-yellow-400 transition">
+          <i class="fab fa-tiktok"></i>
+        </a>
+        <a href="https://www.kwai.com/@CanalCienciaNews" aria-label="Kwai (ícone genérico)" class="hover:text-yellow-400 transition">
+          <i class="fa-solid fa-video"></i>
+        </a>
+        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" aria-label="WhatsApp" class="hover:text-yellow-400 transition">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
     </nav>
   </header>
+
+  <!-- Script toggle menu mobile -->
+  <script>
+    const navToggle = document.getElementById('navToggle');
+    const mobileNav = document.getElementById('mobileNav');
+
+    navToggle.addEventListener('click', () => {
+      mobileNav.hidden = !mobileNav.hidden;
+      navToggle.setAttribute('aria-expanded', !mobileNav.hidden);
+    });
+  </script>
+</body>
 
 <!-- ===========================
      HERO (Carrossel responsivo com Swiper.js)
