--- a/quanto-tempo-foton-excitacao-atomica.html
+++ b/quanto-tempo-foton-excitacao-atomica.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -76,13 +75,14 @@
 
       <!-- Logo -->
       <a href="index.html" aria-label="Ciência News — Início" class="flex-shrink-0">
-        <img src="logo.png" alt="Logotipo Ciência News" class="h-10 md:h-12" />
+        <img src="https://portalciencianews.com.br/logo.png" alt="Logotipo Ciência News" class="h-10 md:h-12" />
       </a>
 
       <!-- Menu Desktop -->
       <nav class="hidden md:flex space-x-6" aria-label="Menu principal">
-        <a href="https://canalciencianews.github.io/" class="hover:text-yellow-400 transition">Início</a>
-        <a href="#" class="hover:text-yellow-400 transition">Contato</a>
+        <a href="https://portalciencianews.com.br" class="hover:text-yellow-400 transition">Início</a>
+        <a href="https://portalciencianews.com.br/post/arquivos.html" class="hover:text-yellow-400 transition">Arquivos</a>
+<a href="#" class="hover:text-yellow-400 transition">Contato</a>
       </nav>
 
       <!-- Ícones sociais Desktop -->
@@ -117,8 +117,9 @@
     <!-- Menu Mobile -->
     <nav id="mobileNav" class="md:hidden bg-[#001F3F] text-white" hidden aria-label="Menu móvel">
       <ul class="flex flex-col space-y-2 p-4">
-        <li><a href="https://canalciencianews.github.io/" class="hover:text-yellow-400 transition">Início</a></li>
-        <li><a href="#" class="hover:text-yellow-400 transition">Notícias</a></li>
+        <li><a href="https://portalciencianews.com.br" class="hover:text-yellow-400 transition">Início</a></li>
+       <a href="https://portalciencianews.com.br/post/arquivos.html" class="hover:text-yellow-400 transition">Arquivos</a>
+ <li><a href="#" class="hover:text-yellow-400 transition">Notícias</a></li>
         <li><a href="#" class="hover:text-yellow-400 transition">Contato</a></li>
       </ul>
       <!-- Ícones sociais Mobile -->
@@ -459,9 +460,6 @@
   </p>
 </div>
 
-
-
-
   </div>
 </main>
 
@@ -478,8 +476,8 @@
       <!-- Menus/links rápidos -->
       <nav class="footer-nav mb-4 md:mb-0" aria-label="Links do rodapé">
         <ul class="nav-list flex flex-wrap gap-4">
-          <li><a href="https://canalciencianews.github.io/" class="nav-link hover:text-orange-400">Início</a></li>
-          <li><a href="#" class="nav-link hover:text-orange-400">Notícias</a></li>
+          <li><a href="https://portalciencianews.com.br" class="nav-link hover:text-orange-400">Início</a></li>
+          <li><a href="https://portalciencianews.com.br/post/arquivos.html" class="nav-link hover:text-orange-400">Arquivos</a></li>
           <li><a href="#" class="nav-link hover:text-orange-400">Contato</a></li>
         </ul>
       </nav>
