--- a/quanto-tempo-foton-excitacao-atomica.html
+++ b/quanto-tempo-foton-excitacao-atomica.html
@@ -117,11 +117,11 @@
     <!-- Menu Mobile -->
     <nav id="mobileNav" class="md:hidden bg-[#001F3F] text-white" hidden aria-label="Menu móvel">
       <ul class="flex flex-col space-y-2 p-4">
-        <li><a href="https://portalciencianews.com.br" class="hover:text-yellow-400 transition">Início</a></li>
-       <a href="https://portalciencianews.com.br/post/arquivos.html" class="hover:text-yellow-400 transition">Arquivos</a>
- <li><a href="#" class="hover:text-yellow-400 transition">Notícias</a></li>
-        <li><a href="#" class="hover:text-yellow-400 transition">Contato</a></li>
-      </ul>
+  <li><a href="https://portalciencianews.com.br" class="hover:text-yellow-400 transition">Início</a></li>
+  <li><a href="https://portalciencianews.com.br/post/arquivos.html" class="hover:text-yellow-400 transition">Arquivos</a></li>
+  <li><a href="#" class="hover:text-yellow-400 transition">Notícias</a></li>
+  <li><a href="#" class="hover:text-yellow-400 transition">Contato</a></li>
+</ul>
       <!-- Ícones sociais Mobile -->
       <div class="flex justify-start space-x-4 mt-2">
         <a href="https://www.facebook.com/profile.php?id=100079774894307" aria-label="Facebook" class="hover:text-yellow-400 transition">
