--- a/quanto-tempo-foton-excitacao-atomica.html
+++ b/quanto-tempo-foton-excitacao-atomica.html
@@ -64,7 +64,7 @@
 
 <!-- Font Awesome (ícones) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+<script src="script.js" defer></script>
 <body class="antialiased text-gray-900">
 
   <!-- ===========================
